@@ -22,8 +22,8 @@ QT_BEGIN_MOC_NAMESPACE
 QT_WARNING_PUSH
 QT_WARNING_DISABLE_DEPRECATED
 struct qt_meta_stringdata_KKEditClass_t {
-    QByteArrayData data[18];
-    char stringdata0[240];
+    QByteArrayData data[20];
+    char stringdata0[257];
 };
 #define QT_MOC_LITERAL(idx, ofs, len) \
     Q_STATIC_BYTE_ARRAY_DATA_HEADER_INITIALIZER_WITH_OFFSET(len, \
@@ -49,7 +49,9 @@ QT_MOC_LITERAL(13, 178, 14), // "setPreferences"
 QT_MOC_LITERAL(14, 193, 11), // "setBMColour"
 QT_MOC_LITERAL(15, 205, 13), // "setLineColour"
 QT_MOC_LITERAL(16, 219, 7), // "setFont"
-QT_MOC_LITERAL(17, 227, 12) // "addToToolBar"
+QT_MOC_LITERAL(17, 227, 12), // "addToToolBar"
+QT_MOC_LITERAL(18, 240, 10), // "switchPage"
+QT_MOC_LITERAL(19, 251, 5) // "index"
 
     },
     "KKEditClass\0doTimer\0\0doFileMenuItems\0"
@@ -58,7 +60,8 @@ QT_MOC_LITERAL(17, 227, 12) // "addToToolBar"
     "doHelpMenuItems\0doToolsMenuItems\0"
     "doDoubleClickPrefs\0QListWidgetItem*\0"
     "item\0setPreferences\0setBMColour\0"
-    "setLineColour\0setFont\0addToToolBar"
+    "setLineColour\0setFont\0addToToolBar\0"
+    "switchPage\0index"
 };
 #undef QT_MOC_LITERAL
 
@@ -68,7 +71,7 @@ static const uint qt_meta_data_KKEditClass[] = {
        8,       // revision
        0,       // classname
        0,    0, // classinfo
-      14,   14, // methods
+      15,   14, // methods
        0,    0, // properties
        0,    0, // enums/sets
        0,    0, // constructors
@@ -76,20 +79,21 @@ static const uint qt_meta_data_KKEditClass[] = {
        0,       // signalCount
 
  // slots: name, argc, parameters, tag, flags
-       1,    0,   84,    2, 0x0a /* Public */,
-       3,    0,   85,    2, 0x0a /* Public */,
-       4,    0,   86,    2, 0x0a /* Public */,
-       5,    0,   87,    2, 0x0a /* Public */,
-       6,    0,   88,    2, 0x0a /* Public */,
-       7,    0,   89,    2, 0x0a /* Public */,
-       8,    0,   90,    2, 0x0a /* Public */,
-       9,    0,   91,    2, 0x0a /* Public */,
-      10,    1,   92,    2, 0x0a /* Public */,
-      13,    0,   95,    2, 0x0a /* Public */,
-      14,    0,   96,    2, 0x0a /* Public */,
-      15,    0,   97,    2, 0x0a /* Public */,
-      16,    0,   98,    2, 0x0a /* Public */,
-      17,    0,   99,    2, 0x0a /* Public */,
+       1,    0,   89,    2, 0x0a /* Public */,
+       3,    0,   90,    2, 0x0a /* Public */,
+       4,    0,   91,    2, 0x0a /* Public */,
+       5,    0,   92,    2, 0x0a /* Public */,
+       6,    0,   93,    2, 0x0a /* Public */,
+       7,    0,   94,    2, 0x0a /* Public */,
+       8,    0,   95,    2, 0x0a /* Public */,
+       9,    0,   96,    2, 0x0a /* Public */,
+      10,    1,   97,    2, 0x0a /* Public */,
+      13,    0,  100,    2, 0x0a /* Public */,
+      14,    0,  101,    2, 0x0a /* Public */,
+      15,    0,  102,    2, 0x0a /* Public */,
+      16,    0,  103,    2, 0x0a /* Public */,
+      17,    0,  104,    2, 0x0a /* Public */,
+      18,    1,  105,    2, 0x0a /* Public */,
 
  // slots: parameters
     QMetaType::Void,
@@ -106,6 +110,7 @@ static const uint qt_meta_data_KKEditClass[] = {
     QMetaType::Void,
     QMetaType::Void,
     QMetaType::Void,
+    QMetaType::Void, QMetaType::Int,   19,
 
        0        // eod
 };
@@ -130,6 +135,7 @@ void KKEditClass::qt_static_metacall(QObject *_o, QMetaObject::Call _c, int _id,
         case 11: _t->setLineColour(); break;
         case 12: _t->setFont(); break;
         case 13: _t->addToToolBar(); break;
+        case 14: _t->switchPage((*reinterpret_cast< int(*)>(_a[1]))); break;
         default: ;
         }
     }
@@ -164,13 +170,13 @@ int KKEditClass::qt_metacall(QMetaObject::Call _c, int _id, void **_a)
     if (_id < 0)
         return _id;
     if (_c == QMetaObject::InvokeMetaMethod) {
-        if (_id < 14)
+        if (_id < 15)
             qt_static_metacall(this, _c, _id, _a);
-        _id -= 14;
+        _id -= 15;
     } else if (_c == QMetaObject::RegisterMethodArgumentMetaType) {
-        if (_id < 14)
+        if (_id < 15)
             *reinterpret_cast<int*>(_a[0]) = -1;
-        _id -= 14;
+        _id -= 15;
     }
     return _id;
 }
