@@ -1,4 +1,7 @@
 0.5.0
+done switch tab.
+Done Save all.
+Done build/show documentaion.
 Code clean.
 Fixed doxyfile.
 Fixed header sysntax hiliting.
